# mini-mafia

./: Anchor.toml
programs/mini-mafia/: Cargo.toml
programs/mini-mafia/src/: lib.rs
tests/: mini-mafia.ts
